package dao;

import shopping.ProductCatalogue;

public class ProductCatalogueDAO {
    public ProductCatalogue getById(String catalogueId) {
        // Implementation to retrieve product catalogue by ID from the database
        return null;
    }

    public void save(ProductCatalogue catalogue) {
        // Implementation to save product catalogue to the database
    }

    public void update(ProductCatalogue catalogue) {
        // Implementation to update product catalogue in the database
    }

    public void delete(ProductCatalogue catalogue) {
        // Implementation to delete product catalogue from the database
    }
}