package shopping;

public class Address {
    private String street;
    private String city;
    private String zip;

    // Constructors, getters, and setters
}