
package shopping;

public class ProductCatalogue {
    private String name;

    public ProductCatalogue(String name) {
        this.name = name;
    }

    public String getName() {
        return name;
    }

}



